# seadex-torznab

./: README.md  install.sh  pyproject.toml  requirements.txt  seadex-torznab.py
.github/workflows/: build.yml
seadex_torznab/: __main__.py  app.py  logging_config.py  main.py  routes.py  torznab.py
